--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,3 +15,16 @@ main {
 .vote-count {
     font-size: 0.8rem;
 }
+
+.fixed-size {
+    width: 1050px;
+    height: 100px;
+    overflow: hidden;
+    text-align: justify;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
+}
+     
