--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,4 +27,23 @@ a{
     color: inherit;
     text-decoration: none;
 }
-     
+
+.form-control{
+    border-radius: 10px;
+    background-color: #343a40;
+    border-color: #9a9da0;
+    color: #9a9da0;
+}
+
+.form-control:hover{
+    background-color: #343a40;
+    border-color: #cccdcf;
+    color: #cccdcf;
+}
+
+.form-control:focus {
+    background-color: #4e5860;
+    box-shadow: 0 0 0 0;
+    border-color: white;
+    color: white;
+}
