--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,13 @@ main {
     padding-top: 80px;
 }
 
+.date {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+
+}
+
 .btn-upvote {
     background-color: #f8f9fa;
     color: #007bff;
